After an evaluation, GNOME has moved from Bugzilla to GitLab. Learn more about GitLab.
No new issues can be reported in GNOME Bugzilla anymore.
To report an issue in a GNOME project, go to GNOME GitLab.
Do not go to GNOME Gitlab for: Bluefish, Doxygen, GnuCash, GStreamer, java-gnome, LDTP, NetworkManager, Tomboy.
Bug 779967 - week-view: timed events in first two columns are never shown
week-view: timed events in first two columns are never shown
Status: RESOLVED FIXED
Product: gnome-calendar
Classification: Applications
Component: Views
unspecified
Other Linux
: Normal blocker
: 3.26
Assigned To: GNOME Calendar maintainers
GNOME Calendar maintainers
Depends on:
Blocks:
 
 
Reported: 2017-03-13 07:36 UTC by Mohammed Sadiq
Modified: 2017-03-14 18:39 UTC
See Also:
GNOME target: ---
GNOME version: ---


Attachments
window: set the correct date range for week view (1.51 KB, patch)
2017-03-14 18:33 UTC, Georges Basile Stavracas Neto
committed Details | Review

Description Mohammed Sadiq 2017-03-13 07:36:07 UTC
Timed events added to the first two columns are never shown in week-view. They are shown in month-view though.

My timezone is UTC+05:30. Region & Language format is United Kingdom (English)

I just tried to add a new event in the first column (Eg: May 1, 2017) by dragging through some columns in week-view.

Thanks
Comment 1 Georges Basile Stavracas Neto 2017-03-14 18:33:56 UTC
Created attachment 347936 [details] [review]
window: set the correct date range for week view

Previous commits broke the week view's date range (more
than it was already broken). This patch fixes that by
using the correct method to get the week start.
Comment 2 Georges Basile Stavracas Neto 2017-03-14 18:38:57 UTC
Thanks for the report.

Attachment 347936 [details] pushed as 8102912 - window: set the correct date range for week view